<resources>

    <string name="app_name">酷炫WiFi</string>

    <!-- Wifi -->
    <string name="textview_xiaoshi">当前没有扫描到WIFI网络</string>
    <string name="left_menu_levels_textview">信号走势</string>
    <string name="left_menu_wifilocation_textview">Wifi位置</string>
    <string name="left_menu_pwdStrength_textview">密码强度</string>
    <string name="left_menu_gplot_textview">Wifi好友</string>
    <string name="left_menu_setting_textview">设置</string>
    <string name="poptitle">未知</string>
    <string name="popinputps">输入密码</string>
    <string name="popconnection">连接</string>
    <string name="popcancel">取消</string>

    <!-- Button -->
    <string name="saomiao">扫描网络</string>
    <string name="start">打开WIFI</string>
    <string name="stop">关闭WIFI</string>
    <string name="state">WIFI状态</string>
    <string name="tiaozhuan">跳转查看WIFI</string>
    <string name="btn_guide_tomain">立即体验</string>

    <!-- Radio -->
    <string name="main_radio_one">第一个</string>
    <string name="main_radio_two">第二个</string>
    <string name="main_radio_three">第三个</string>
    <string name="main_radio_four">第四个</string>

    <!-- ActionBar -->
    <string name="actionbar_one">第一个</string>
    <string name="actionbar_two">第二个</string>
    <string name="actionbar_three">第三个</string>
    <string name="actionbar_four">第四个</string>

    <!-- 地图热点 -->
    <string name="menu_map_common">普通地图</string>
    <string name="menu_map_site">卫星地图</string>
    <string name="menu_map_traffic">实时地图</string>
    <string name="menu_map_location">我的位置</string>
    <string name="menu_map_sensormode_normal">普通模式</string>
    <string name="menu_map_sensormode_following">跟随模式</string>
    <string name="menu_map_sensormode_compass">罗盘模式</string>
    <string name="menu_map_add_overlay">添加覆盖物</string>
    <!-- 设置 -->
    <string name="Setting_textview">设置端口</string>
    <!-- 检测密码强度 -->
    <string name="wifi_menu_pwdstrength">检测密码强度</string>
    <string name="wifi_pwdstrength_start">开始检测</string>

</resources>